--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-body  {  
+body  {
 /*
 Colors used:
-Primary Color (Yellow):#fff35f;
+Primary Color (Blue):#0091FF;
 Secondary Color (Charcoal):#434343;
 */
 background-color: #ffffff;
@@ -10,4 +10,58 @@ font-size: 16px;
 font-weight: 300;
 line-height: 1.6;
 color: #4a4a4a;
+}
+h1, h2, h3, h4 {
+  line-height: 1.4;
+}
+h1 {
+  font-size: 2.75em;
+  font-weight: 700;
+}
+h2 {
+  font-size: 2.25em;
+  font-weight:700;
+}
+h3 {
+  font-size: 1.75em;
+  font-weight: 400;
+}
+h4 {
+  font-size: 1.35em;
+  font-weight: 400;
+}
+img {
+  width: 100%;
+}
+a {
+  color: #0091FF;
+  text-decoration: none; /* No underlying */
+}
+a:visited {
+   color: #FB7F64;/* visited link */
+}
+a:hover
+a:focus {
+  color: #046BE0;
+  text-decoration: underline; /*underlining when hovering over a link */
+}
+a:active {
+  color: #046BE0;/* active link */
+}
+.button{
+  display: inline-block;
+  background-color: #FFF35F;
+  color: #ffffff !important;/* needed to override the default link color */
+  font-weight: 400;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid #994c30; /*width of the border, type, color */
+  transition 0.2s opacity;
+}
+.button:hover {
+  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+  text-decoration: none;
+}
+.button:active {
+
 }
