--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ Colors used:
 Primary Color (Blue):#0091FF;
 Secondary Color (Charcoal):#434343;
 */
-background-color: #ffffff;
+background-color: #F7F8FA;
 font-family: 'Poppins', sans-serif;
 font-size: 16px;
 font-weight: 300;
@@ -78,4 +78,10 @@ nav a.active{
 }
 .button:active {
 
+}
+header{
+  background-color: #EAF1FF;
+  padding: 10px;
+  margin: 10px;
+  border-bottom: 3px solid #4a4a4a;
 }
