--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ nav a.active{
 }
 header {
   background-color: #EAF1FF;
-  padding: 10px;
+  padding: 10px 0;
   margin: 10px;
   border-bottom: 3px solid #4a4a4a;
 }
@@ -106,4 +106,8 @@ selector {
 }
 #hero h1{
   text-align: center; /* centers text */
+}
+.logo {
+  max-width: 250px;
+  text-align: center;
 }
