--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ nav a.active{
   border: 2px solid #046BE0;
 }
 .button.contact.hover{
-  background-color: #046BE0
+  background-color: #046BE0;
   color: #ffffff !important;
 }
 .button{
@@ -111,6 +111,7 @@ header {
 .logo {
   max-width: 250px;
   text-align: center;
+  font-size: 20px;
 }
 nav > ul {
   list-style-type: none;
@@ -152,16 +153,27 @@ nav {
   padding: 20px 0;
   display: inline-block;
   width: 100%;
+  text-align: center;
+}
+#hero span{
+  display: block;
 }
 main {
   padding-top: 140px;
 }
-#footer > ul {
+.social-media ul{
   list-style-type: none;
   padding: 0;
-}
-#footer ul {
   display: inline-block;
+}
+.social-media li{
+  float: left;
+  margin: 10px 20px;
+}
+footer {
+  text-align: center;
+  background-color: #F9F9F9;
+  padding: 20px;
 }
 /* ================================
 Medium devices (640px and larger)
@@ -169,25 +181,68 @@ Medium devices (640px and larger)
 @media only screen and (min-width:640px) {
   header {
     text-align: unset;
-    padding: 20px 0 13px;
+    padding: 20px 0;
   }
 
   nav {
     width: auto;
     float: right;
-    margin-top: 4px;
+    margin-top: 5px;
   }
   main {
     padding-top: 99px;
+  }
+  .container{
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  header .container:after{
+    content: "";
+    clear: both;
+    display: table;
+  }
+  nav ul{
+    margin: 0;
+  }
+  .col-md-6{
+    width: 50%;
+  }
+  [class*="col-"]{
+    float: left;
+    padding: 10px;
+  }
+  .row::after{
+    content: "";
+    clear: both;
+    display: table;
+  }
+  #about-page h3 {
+    margin-top: 0;
   }
 }
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
+  .col-lg-7{
+    width: 60%;
+  }
+  .col-lg-5 {
+    width: 40%;
+  }
+  .container{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 /* ==============================
 X-large devices (1440px or larger)
 ================================= */
 @media only screen and (min-width: 1440px) {
+  .container{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
