--- a/css/style.css
+++ b/css/style.css
@@ -43,23 +43,46 @@ img {
 }
 a {
   color: #FFFFFF;
-  text-decoration: none; /* No underlying */
+  text-decoration: underline;
 }
 a:visited {
    color: #FFFFFF;/* visited link */
 }
-a:hover {
-  color: #FFFFFF;
-  text-decoration: underline #00CD91 3px; /*underlining when hovering over a link */
+a:hover, a:focus {
+  color: #00CD91;
+  text-decoration: none;
 }
 a:active {
   color: #FFFFFF;/* active link */
-  text-decoration: underline #00CD91 3px;
+  text-decoration: none;
+}
+nav {
+  display: inline-block;
+  width: 100%;
+}
+nav > ul {
+  list-style-type: none;
+  padding: 0;
+}
+nav > ul >li {
+  display: inline-block;
+}
+nav > ul > li > a {
+  padding: 0 0px;
+  margin: 0 15px;
+  font-weight: 400;
+  text-decoration: none;
+}
+nav > ul > li > a:hover{
+   color: #ffffff;
+   border-bottom: 3px solid #00CD91;
 }
 nav a.active{
-  color: #FFFFFF;
-  font-weight: 400;
-  text-decoration: underline #00CD91 3px;
+    color: #ffffff;
+    border-bottom: 3px solid #00CD91;
+}
+nav > ul > li > a:active {
+     color: #ffffff;
 }
 .button.contact{
   background-color: transparent;
@@ -77,7 +100,7 @@ nav a.active{
   font-weight: 400;
   padding: 10px;
   transition: 0.2s opacity;
-  border-radius: 40px;
+  text-decoration: none;
 }
 .button:hover {
   text-decoration: none;
@@ -90,9 +113,9 @@ nav a.active{
   background-color: transparent;
   color: #ffffff;
   border: 2px solid #F67762;
-  border-radius: 40px;
   padding: 10px;
   font-weight: 400;
+  text-decoration: none;
 }
 .button-hero:hover{
   color: #ffffff;
@@ -124,46 +147,20 @@ header {
 #hero h1{
   text-align: center; /* centers text */
   color: #FFFFFF;
+  line-height: 1.8;
+}
+#hero span.color{
+  color: #00CD91;
+  display: unset;
 }
 .logo {
   max-width: 250px;
   text-align: center;
   font-size: 20px;
   font-weight: 400;
+  text-decoration: none;
 }
-nav > ul {
-  list-style-type: none;
-  padding: 0;
-}
-nav > ul >li {
-  display: inline-block;
-}
-nav > ul > li > a {
-  padding: 0 10px;
-  font-weight: 400;
-  color: #FFFFFF;
-}
-nav > ul > li > a:visited {
-  padding: 0 10px;
-  text-transform: lower;
-  font-weight: 400;
-  color: #FFFFFF;
-}
-nav > ul > li > a:hover {
-  padding: 0 10px;
-  font-weight: 400;
-  color: #FFFFFF;
-}
-nav > ul > li > a:active {
-  padding: 0 10px;
-  font-weight: 400;
-  color: #FFFFFF;
-  text-decoration: underline #00CD91 3px;
-}
-nav {
-  display: inline-block;
-  width: 100%;
-}
+
 #hero {
   background-color: #2F2F43;
   margin: 0;
@@ -249,14 +246,9 @@ Medium devices (640px and larger)
   nav ul{
     margin: 0;
   }
-  .col-lg-5{
-    width: 100%;
-  }
-  .col-lg-7 {
-    width: 100%;
-  }
   [class*="col-"]{
     padding: 0 75px;
+    float: left;
   }
   .row::after{
     content: "";
@@ -266,25 +258,27 @@ Medium devices (640px and larger)
   #about-page h3 {
     margin-top: 0;
   }
+
   #hero {
       padding: 140px 0;
   }
   #work h2{
-    margin-left: 100px;
+    margin-left: 78px;
   }
 }
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
-  .col-lg-5{
-    width: 100%;
+  .col-6{
+    width: 50%;
   }
   .container{
     max-width: 1200px;
-    margin-left: auto;
+    margin-left: 78px auto;
     margin-right: auto;
   }
+
 }
 /* ==============================
 X-large devices (1440px or larger)
