--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,11 @@ header {
   padding: 0 0 45px;
 }
 
+.row2 .col-6{
+  margin: 0 auto;
+  float: none;
+}
+
 #work .col-6{
   margin-bottom: 3em;
 }
@@ -231,6 +236,15 @@ main {
 
 #about-page h1 {
   padding-top: 10px;
+  display:none;
+}
+
+.center {
+  text-align: center;
+}
+
+.center picture img{
+  padding: 70px;
 }
 
 footer {
