--- a/css/style.css
+++ b/css/style.css
@@ -248,7 +248,7 @@ header {
 }
 
 #hero {
-  background-image: url(../img/background-color.svg);
+  background-image: url(../img/dark-triangle.svg);
   margin: 0;
   display: inline-block;
   width: 100%;
