--- a/css/style.css
+++ b/css/style.css
@@ -202,9 +202,12 @@ header {
   background-color: #2f2f43;
   padding: 10px 0;
   margin: 0;
+
+  /*
   -webkit-box-shadow: 0px 6px 15px 0px rgba(50, 50, 50, 0.55);
   -moz-box-shadow: 0px 6px 15px 0px rgba(50, 50, 50, 0.55);
-  box-shadow: 0px 6px 15px 0px rgba(50, 50, 50, 0.55);
+  box-shadow: 0px 6px 15px 0px rgba(50, 50, 50, 0.55); */
+
   position: fixed;
   display: inline-block;
   width: 100%;
